<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">随意付</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="amount_title">当前充值号码</string>
    <string name="select_price">选择充值面额</string>
    <string name="select_type">选择操作类型</string>
    <string name="item_prize">售价</string>
    <string name="item_dai">代充</string>
    <string name="Ensure">确定</string>
    <string name="amount_hint">选择面额，快速支付到账</string>
    <string name="amount_chart_hint">选择面额，快速支付到账</string>
	<string name="scan">扫描条码结果</string>
	<string name="not_found">扫描不到结果</string>
	<string name="water_pay_area">缴费地区</string>
	<string name="water_pay_company">缴费公司</string>
	<string name="water_pay_hint">缴费单位和编号</string>
	<string name="water_pay_number">客户编号：</string>
	<string name="water_pay_ok">确认缴费</string>
	<string name="account_limit">账户余额:100元</string>
	<string name="fill_in">充值</string>
	<string name="fill_out">提现</string>
	<string name="account_info">当前账户信息</string>
	<string name="phoneinput_tip">请输入充值的手机号码</string>
	<string name="scan_text">将二维码或条码放入框内, 即可自动扫描</string>
	<string name="scan_title">条形码/二维码扫描</string>
	<string name="back">返回</string>
	<string name="warning">提示</string>
	<string name="phone_not_empty">手机号码不能为空</string>
</resources>
