<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppBackgroundColor"
    android:orientation="vertical" >


        <TextView
            android:layout_width="fill_parent"
            style="@style/style_tv_BOLD"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10.0dip"
            android:text="@string/water_pay_hint"
            android:layout_marginTop="10dp"
            android:textSize="18.0sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/rounded_rectangle"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:background="@drawable/more_up"
            android:gravity="center_vertical" >

            <TextView
                style="@style/style_tv_BOLD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15.0dip"
                android:text="@string/water_pay_area" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20.0dip"
                android:src="@drawable/arrow" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line" />

        <RelativeLayout
            android:id="@+id/relMoreSet"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:background="@drawable/more_down"
            android:gravity="center_vertical" >

            <TextView
                style="@style/style_tv_BOLD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15.0dip"
                android:text="@string/water_pay_company" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20.0dip"
                android:src="@drawable/arrow" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/rounded_rectangle"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:background="@drawable/more_up"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/numberTV"
                style="@style/style_tv_BOLD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15.0dip"
                android:text="@string/water_pay_number" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20.0dip"
                android:background="#00000000"
                android:layout_toRightOf="@id/numberTV" >

                <requestFocus />
            </EditText>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/blue_button_selector"
        android:text="@string/water_pay_ok"
        android:textSize="20sp"
        android:textColor="@android:color/white" />

</LinearLayout>