<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppBackgroundColor"
    android:orientation="vertical" >
    
            <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/title_bar"
                android:gravity="center_vertical"
                android:paddingLeft="10.0dip"
                android:text="@string/account_info"
                android:textColor="@color/TextColorWhite"
                android:textSize="18.0sp" />
        </FrameLayout>
        
            <ImageView 
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="fitCenter"
                android:background="@drawable/black_border"
                android:layout_marginTop="15dp"
                android:src="@drawable/robot_cat"
                android:layout_gravity="center"/>
        
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/rounded_rectangle"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:background="@drawable/more_up"
            android:gravity="center_vertical" >

            <TextView
                style="@style/style_tv_BOLD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15.0dip"
                android:layout_centerInParent="true"
                android:textSize="25sp"
                android:text="@string/account_limit" />

        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line" />

        <RelativeLayout
            android:id="@+id/relMoreSet"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:background="@drawable/more_down"
            android:gravity="center_vertical" >

            <TextView
                style="@style/style_tv_BOLD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15.0dip"
                android:text="@string/fill_in" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20.0dip"
                android:src="@drawable/arrow" />
        </RelativeLayout>
<ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line" />

        <RelativeLayout
            android:id="@+id/relMoreSet"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:background="@drawable/more_down"
            android:gravity="center_vertical" >

            <TextView
                style="@style/style_tv_BOLD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15.0dip"
                android:text="@string/fill_out" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20.0dip"
                android:src="@drawable/arrow" />
        </RelativeLayout>        
    </LinearLayout>

    
</LinearLayout>
